--- a/contactform.css
+++ b/contactform.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+
+*{
+    font-family: 'Josefin Sans', sans-serif;
+}
+
 body{
     background-color:#96caa2;
     box-sizing: border-box;
@@ -6,9 +12,15 @@ body{
 h1,
 .divs{
     background-color: white;
-    width: 50%;
-    margin: auto;
+    /* width: 50%;
+    margin: auto; */
 }
+
+.main{
+    margin: auto;
+    width: 60%;
+   
+} 
 
 h1{
     border-top: solid 10px #5c9c6b;
@@ -27,9 +39,10 @@ h1,
     display: inline-block;
     background-color: white;
     padding: 10px 20px;
-    margin-left: 72.5%;
+    /* margin-left:  calc(100vh - 120px); */
     border-radius: 9px;
-    width: 90px;
+    width: 120px;
+    /* margin:auto; */
 }
 
 input{
@@ -38,10 +51,46 @@ input{
     border-left: none;
     border-right: none;
     border-bottom: 2px #599a68 solid;
-    width: 200px;
+    width: 250px;
+    font-size: 20px;
 }
 
 input:focus{
     outline:none;
 }
 
+
+
+.namediv,
+.emaildiv,
+.phonediv,
+.addressdiv{
+      /* background-color:rgba(92,156,107,0.7);
+      color: #fff;
+      font-size:16px;
+       padding:5px ; 
+      display: inline-block; 
+      border-radius: 7px;
+      transition: all 0.5s ease;
+*/
+margin-top: -10px;
+color: red;
+}
+
+
+
+
+.stUf5b{
+    color: red;
+}
+
+
+@media(max-width:966px){
+    .main{
+          width: 90%;
+    }
+
+    .submit{
+          width: 120px;
+    }
+}
